--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "bootstrap": "^5.2.0",
     "core-js": "^3.20.3",
+    "jquery": "^3.6.0",
     "@popperjs/core": "^2.11.5"
   }
 }
