--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ django-allauth
 django-environ
 
 python-webpack-boilerplate
+
+# We are only using this for helpers. Bootstrap js/css comes from webpack
+django-bootstrap-v5
